# LocalLingua

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
backend/: README.md  pyproject.toml
backend/app/: config.py  errors.py  languages.py  main.py  models.py
backend/app/translator/: base.py  fake.py  lang_detect.py  llama_cpp.py  prompt.py
backend/tests/: test_api.py  test_prompt.py  test_sanitize.py
frontend/: README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
frontend/src/: index.css  main.tsx
frontend/src/components/: LanguagePicker.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  textarea.tsx
frontend/src/lib/: api.ts  history.test.ts  history.ts  toast.tsx
frontend/src/pages/: App.tsx
